# rubiks-cube

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  run.sh
include/: Camera.h  Colors.h  Shader.h  SoundManager.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: glad.c  main.cpp
